crates/actions/tests/snapshots/commands_test__plugin_commands__cache__gathers_env_inputs.snap
---
source: crates/actions/tests/commands_test.rs
expression: "json::format(&data, true).unwrap()"
---
[
  {
    "command": {
      "command": "echo",
      "args": [
        "cache"
      ],
      "set_executable": false,
      "shell": null,
      "stream": false
    },
    "inputEnv": {
      "EXISTS": "value",
      "MISSING": ""
    }
  }
]
