crates/actions/tests/snapshots/commands_test__plugin_commands__cache__gathers_file_inputs_by_hash.snap
---
source: crates/actions/tests/commands_test.rs
expression: "json::format(&data, true).unwrap()"
---
[
  {
    "command": {
      "command": "echo",
      "args": [
        "cache"
      ],
      "set_executable": false,
      "shell": null,
      "stream": false
    },
    "inputFiles": {
      "input.txt": "hash:30d74d258442c7c65512eafab474568dd706c430"
    }
  }
]
