crates/actions/tests/snapshots/commands_test__plugin_commands__cache__gathers_file_inputs_by_size.snap
---
source: crates/actions/tests/commands_test.rs
expression: "json::format(&data, true).unwrap()"
---
[
  {
    "command": {
      "command": "echo",
      "args": [
        "cache"
      ],
      "set_executable": false,
      "shell": null,
      "stream": false
    },
    "inputFiles": {
      "input.txt": "size:4"
    }
  }
]
