crates/actions/tests/snapshots/commands_test__plugin_commands__cache__gathers_file_inputs_by_size_instead_of_hash_if_no_vcs.snap
---
source: crates/actions/tests/commands_test.rs
expression: "json::format(&data, true).unwrap()"
---
[
  {
    "key": "key",
    "command": {
      "command": "echo",
      "args": [
        "cache"
      ],
      "set_executable": false,
      "stream": false
    },
    "inputFiles": {
      "input.txt": "size:4"
    }
  }
]
